--- a/app/src/main/res/drawable/ic_informasi.xml
+++ b/app/src/main/res/drawable/ic_informasi.xml
@@ -1,8 +1,13 @@
-<vector android:height="24dp" android:tint="#1E88E5"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M21,5c-1.11,-0.35 -2.33,-0.5 -3.5,-0.5c-1.95,0 -4.05,0.4 -5.5,1.5c-1.45,-1.1 -3.55,-1.5 -5.5,-1.5S2.45,4.9 1,6v14.65c0,0.25 0.25,0.5 0.5,0.5c0.1,0 0.15,-0.05 0.25,-0.05C3.1,20.45 5.05,20 6.5,20c1.95,0 4.05,0.4 5.5,1.5c1.35,-0.85 3.8,-1.5 5.5,-1.5c1.65,0 3.35,0.3 4.75,1.05c0.1,0.05 0.15,0.05 0.25,0.05c0.25,0 0.5,-0.25 0.5,-0.5V6C22.4,5.55 21.75,5.25 21,5zM21,18.5c-1.1,-0.35 -2.3,-0.5 -3.5,-0.5c-1.7,0 -4.15,0.65 -5.5,1.5V8c1.35,-0.85 3.8,-1.5 5.5,-1.5c1.2,0 2.4,0.15 3.5,0.5V18.5z"/>
-    <path android:fillColor="@android:color/white" android:pathData="M17.5,10.5c0.88,0 1.73,0.09 2.5,0.26V9.24C19.21,9.09 18.36,9 17.5,9c-1.7,0 -3.24,0.29 -4.5,0.83v1.66C14.13,10.85 15.7,10.5 17.5,10.5z"/>
-    <path android:fillColor="@android:color/white" android:pathData="M13,12.49v1.66c1.13,-0.64 2.7,-0.99 4.5,-0.99c0.88,0 1.73,0.09 2.5,0.26V11.9c-0.79,-0.15 -1.64,-0.24 -2.5,-0.24C15.8,11.66 14.26,11.96 13,12.49z"/>
-    <path android:fillColor="@android:color/white" android:pathData="M17.5,14.33c-1.7,0 -3.24,0.29 -4.5,0.83v1.66c1.13,-0.64 2.7,-0.99 4.5,-0.99c0.88,0 1.73,0.09 2.5,0.26v-1.52C19.21,14.41 18.36,14.33 17.5,14.33z"/>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
+    android:width="64dp"
+    android:height="50dp"
+    android:viewportWidth="64"
+    android:viewportHeight="50">
+    <path
+        android:name="path"
+        android:pathData="M 60.248 0.006 C 54.159 0.353 42.056 1.617 34.585 6.21 C 34.069 6.527 33.777 7.091 33.777 7.68 L 33.777 48.29 C 33.777 49.58 35.181 50.394 36.364 49.796 C 44.051 45.91 55.168 44.85 60.664 44.559 C 62.541 44.46 64 42.949 64 41.138 L 64 3.432 C 64.001 1.456 62.294 -0.11 60.248 0.006 Z M 29.415 6.21 C 21.945 1.617 9.842 0.354 3.753 0.006 C 1.707 -0.11 0 1.456 0 3.432 L 0 41.139 C 0 42.951 1.459 44.462 3.336 44.56 C 8.835 44.851 19.957 45.912 27.644 49.8 C 28.824 50.398 30.223 49.584 30.223 48.298 L 30.223 7.66 C 30.223 7.07 29.932 6.528 29.415 6.21 Z"
+        android:fillColor="#ffffff"
+        android:strokeWidth="1"/>
 </vector>
