--- a/app/src/main/res/drawable/ic_konsultasi.xml
+++ b/app/src/main/res/drawable/ic_konsultasi.xml
@@ -1,5 +1,18 @@
-<vector android:height="24dp" android:tint="#1E88E5"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M20,18c1.1,0 2,-0.9 2,-2V6c0,-1.1 -0.9,-2 -2,-2H4C2.9,4 2,4.9 2,6v10c0,1.1 0.9,2 2,2H0v2h24v-2H20zM4,6h16v10H4V6z"/>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
+    android:width="60dp"
+    android:height="60dp"
+    android:viewportWidth="60"
+    android:viewportHeight="60">
+    <group android:name="group">
+        <path
+            android:name="path"
+            android:pathData="M 18.75 8.75 C 11.156 8.75 5 14.906 5 22.5 C 5 36.25 21.25 48.75 30 51.657 C 38.75 48.75 55 36.25 55 22.5 C 55 14.906 48.844 8.75 41.25 8.75 C 36.6 8.75 32.487 11.059 30 14.592 C 28.732 12.787 27.048 11.313 25.089 10.296 C 23.131 9.279 20.957 8.748 18.75 8.75 Z"
+            android:fillColor="#ffffff"
+            android:strokeColor="#ffffff"
+            android:strokeWidth="4"
+            android:strokeLineCap="round"
+            android:strokeLineJoin="round"/>
+    </group>
 </vector>
