--- a/app/src/main/res/drawable/ic_person.xml
+++ b/app/src/main/res/drawable/ic_person.xml
@@ -1,5 +1,13 @@
-<vector android:height="24dp" android:tint="#1E88E5"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
+    android:width="50dp"
+    android:height="50dp"
+    android:viewportWidth="50"
+    android:viewportHeight="50">
+    <path
+        android:name="path"
+        android:pathData="M 25 0 C 11.2 0 0 11.2 0 25 C 0 38.8 11.2 50 25 50 C 38.8 50 50 38.8 50 25 C 50 11.2 38.8 0 25 0 Z M 25 10 C 29.825 10 33.75 13.925 33.75 18.75 C 33.75 23.575 29.825 27.5 25 27.5 C 20.175 27.5 16.25 23.575 16.25 18.75 C 16.25 13.925 20.175 10 25 10 Z M 25 45 C 19.925 45 13.925 42.95 9.65 37.8 C 14.029 34.364 19.434 32.497 25 32.497 C 30.566 32.497 35.971 34.364 40.35 37.8 C 36.075 42.95 30.075 45 25 45 Z"
+        android:fillColor="#ffffff"
+        android:strokeWidth="1"/>
 </vector>
