--- a/app/src/main/res/drawable/mybutton.xml
+++ b/app/src/main/res/drawable/mybutton.xml
@@ -18,7 +18,7 @@
         <shape android:shape="rectangle"  >
             <corners android:radius="20dip" />
             <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#8dbab3" android:endColor="#58857e" />
+            <gradient android:angle="-90" android:startColor="#1E88E5" android:endColor="#3700B3" />
         </shape>
     </item>
 </selector>
